# ha-arista-eos

./: .gitignore  LICENSE  README.md  hacs.json  info.md  pyproject.toml  requirements-test.txt
.github/workflows/: test.yml  validate.yml
custom_components/arista_eos/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  diagnostics.py  entity.py  icons.json  manifest.json  quality_scale.yaml  repairs.py  sensor.py  strings.json
custom_components/arista_eos/translations/: en.json
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entities.py  test_init.py  test_repairs.py  test_sensor.py
tests/fixtures/: fixed.json  modular.json
