[project]
name = "ha-arista-eos"
version = "0.1.0"
description = "Home Assistant custom integration for Arista EOS switches via eAPI"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Jonah May" }]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ASYNC",# flake8-async
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "D203",   # incompatible with D211
    "D213",   # incompatible with D212
    "PLR2004",# magic values are acceptable in tests/parsers
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "PLR2004", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_return_any = true
show_error_codes = true
follow_imports = "normal"
files = ["custom_components/arista_eos"]

[[tool.mypy.overrides]]
module = "custom_components.arista_eos.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=custom_components.arista_eos --cov-report=term-missing"
markers = [
    "no_client_patch: do not patch EosClient.run_cmds (exercise the real client)",
]
